update contact button style and fix info content alignment

--- a/css/style.css
+++ b/css/style.css
@@ -1038,6 +1038,7 @@ li.current a {
   transform: translateY(-8px);
   letter-spacing: 0.1em;
 }
+
 .info-name {
   letter-spacing: 0.08rem;
   font-weight: 400;
@@ -1048,6 +1049,14 @@ li.current a {
   font-family: "Arial", "Noto Sans JP", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Yu Ghothic",
     "Meiryo", sans-serif;
 }
+@media (max-width: 767px) {
+  .info-title {
+    text-align: center;
+  }
+  .info-name {
+    text-align: center;
+  }
+}
 .info-content {
   letter-spacing: 0.08rem;
   font-weight: 400;
@@ -1056,6 +1065,19 @@ li.current a {
   color: #8c8b8b;
   font-family: "Arial", "Noto Sans JP", "Hiragino Kaku Gothic ProN", "Hiragino Sans", "Yu Ghothic",
     "Meiryo", sans-serif;
+}
+.info-contact {
+  margin-top: 35px;
+  border: 1px solid rgb(155, 155, 155);
+  text-align: center;
+  letter-spacing: 0.08rem;
+  font-weight: 500;
+  font-size: 12px;
+  padding: 8px 24px;
+  margin-bottom: 1px;
+  color: #8c8b8b;
+  font-family: "Montserrat", "Noto Sans JP", "Hiragino Kaku Gothic ProN", "Hiragino Sans",
+    "Yu Ghothic", "Meiryo", sans-serif;
 }
 
 .info-icon {
